# neural-networks

./: .gitignore  README.md  hello.py  pyproject.toml
data/: heart_disease.pkl
src/lab_1/: eda.ipynb  report.html
src/lab_2/: regression.ipynb  report.html
src/lab_3/: backward_propagation.ipynb  report.html
src/lab_4/: pytorch.ipynb  report.html
src/lab_5/: colab_results.txt  report.html  torch_vision.ipynb  torch_vision_colab.ipynb
src/lab_6/: cnn.ipynb  colab_results.txt  local_cnn.ipynb  report.html
src/lab_7/: colab_results.txt  links.txt  local_recurrent_nn.ipynb  local_testing.ipynb  logs.txt  recurrent_nn.ipynb  recursive_nn.ipynb  report.html
