[project]
name = "neural-networks"
version = "0.1.0"
description = "Neural networks laboratory class @ WUST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.2.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "ucimlrepo>=0.0.7",
    "ydata-profiling>=4.10.0",
]


[tool.ruff]
lint.select = [
    "E",  # pydocstyle
    "W",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8 naming
    "UP",  # pyupgrade
    "D",  # pydocstyle
    "PD",  #pandas-vet
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
]
exclude = ["tests"]
line-length = 88  # Same as Black.
indent-width = 4  # Same as Black.


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"


[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
